Implement Spaces (#3)
