# api.yaml
@@ -216,6 +216,82 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/SpaceAccess'
+        '400':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "User not found, by the given id"
+        '500':
+          description: Issue with the server.
+    patch:
+      tags:
+        - "User"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SpaceAccess'
+      responses:
+        '200':
+          description: Returns the modified SpaceAccess.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SpaceAccess'
+        '400':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "User not found, by the given id"
+        '500':
+          description: Issue with the server.
+
+  /user/{user-id}/space/{space-id}:
+    parameters:
+      - name: user-id
+        in: path
+        description: ID parameter
+        required: true
+        schema:
+          type: integer
+      - name: space-id
+        in: path
+        description: ID parameter
+        required: true
+        schema:
+          type: integer
+    delete:
+      tags:
+        - "User"
+      responses:
+        '200':
+          description: Returns the delted SpaceAccess.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SpaceAccess'
+        '400':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "User not found, by the given id"
+        '500':
+          description: Issue with the server.
 
   # Space
   /spaces/:
@@ -231,10 +307,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Space'
+        '500':
+          description: Issue with the server.
   /space/:
     post:
       tags:
         - "Space"
+      responses:
+        '201':
+          description: Returns the created space.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Space'
+        '500':
+          description: Issue with the server.
   /space/{space-id}:
     parameters:
       - name: space-id
@@ -248,11 +335,24 @@ paths:
         - "Space"
       responses:
         '200':
-          description: The specified Space.
+          description: Returns the specified Space.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Space'
+        '404':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Space not found, by the given id"
+        '500':
+          description: Issue with the server.
+
     put:
       tags:
         - "Space"
@@ -260,10 +360,44 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/Space'
+      responses:
+        '200':
+          description: Returns the modified Space.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Space'
+        '404':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Space not found, by the given id"
+        '500':
+          description: Issue with the server.
     delete:
       tags:
         - "Space"
+      responses:
+        '200':
+          description: Space deleted
+        '404':
+          description: Issue with your Request.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Space not found, by the given id"
+        '500':
+          description: Issue with the server.
 
 
   # Webhooks
@@ -368,6 +502,8 @@ components:
     Space:
       type: object
       properties:
+        id:
+          type: integer
         name:
           type: string
         color1:
@@ -377,6 +513,8 @@ components:
         color3:
           type: string
         color4:
+          type: string
+        imageURL:
           type: string
         primaryLanguage:
           type: string
